	   debconf-get-selections
	 . fixed catifexec function to actually work, also now passes the arguments
	   given to catifexec() to the called command (Thanks John Hallam!)
	 . Added more robust software RAID information capture by running mdadm
	   -Q --detail /dev/md?* because some people may have empty mdadm.conf files
	   (Thanks to John Hallam).

version 0.9.5 -- December 2, 2007
    backupninja changes
	 . Fixed checks on configuration files permissions, since the patch
	   applied to fix #370396 broke this, especially for configuration files
	   created with permissions 000 by an older ninjahelper version.
	 . Enhanced portability for other platforms
	 . Added quoting because it was needed to prevent shell expansion, broking the
           toint function sometimes (Closes: Trac#11)
	 . Fixed reportspace option (Closes: Trac#10)
	 . Fixed ldap handler not recognizing database suffix (Closes: Trac#28)
    handler changes
	dup:
	 . Support duplicity >= 0.4.3 invocation syntax (--ssh-command option
	   is not supported anymore) (Closes: #447425)
	 . New tmpdir configuration option, very useful in case duplicity tends
	   to fill up /tmp.
        ldap:
	 . Fixed shell command quoting issues, missing 'then' clauses, cleaned up
	   compress=yes to be less redundant and not create empty uncompressed
	   file (Closes: #394935)
	 . Fixed ninjahelper to properly set compress option, standardized on yes/no
	   instead of on/off
	 . Fixed problem that caused combination of slapcat and compress to not work
	   together (Closes: Trac#29)
	 . Applied patch from romain.tartiere@healthgrid.org to fix the SSL/TLS options
	   to be correct, also set TLS to be the default over SSL (Closes: Trac#13)
	maildir:
	 . Added an examples file (Closes: Trac#23)
	 . Applied patch from Anarcat that fixes the cp/mkdir calls to not use GNU
	   coreutils options, as well as some bashisms (Closes: Trac#24)
	 . Fix test mode (Closes: Trac#25)
        mysql: